--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,7 +11,7 @@ header {
 .ham-menu-bg {
   position: fixed;
   bottom: 30px;
-  /* left: 20; */
+
   right: 30px;
   background-color: #f4f1de;
   border-radius: 50%;
@@ -29,7 +29,7 @@ header {
   height: 50px;
 }
 
-@media (max-width: 600px) {
+@media (min-width: 600px) {
   .ham-menu-bg {
     display: none;
   }
